# KsanaLLM

./: .clang-format  .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  Dockerfile  LICENSE  README.md  README_cn.md  requirements.txt  setup.py
src/: CMakeLists.txt
src/endpoints_impl/: CMakeLists.txt
src/ksana_llm/: CMakeLists.txt  main.cpp
src/ksana_llm/batch_manager/: CMakeLists.txt  batch_manager.cpp  batch_manager.h
src/ksana_llm/batch_scheduler/: CMakeLists.txt  batch_scheduler.cpp  batch_scheduler.h  batch_scheduler_interface.h  batch_scheduler_test.cpp  batch_scheduler_test_client.h  batch_scheduler_test_helper.h  batch_scheduler_test_helper_test.cpp
src/ksana_llm/block_manager/: CMakeLists.txt  ascend_allocator.cpp  ascend_allocator.h  base_allocator.cpp  base_allocator.h  block_manager.cpp  block_manager.h  block_manager_interface.h  block_manager_test.cpp  device_allocator.cpp  device_allocator.h  host_allocator.cpp  host_allocator.h  memory_block.cpp  memory_block.h  nvidia_allocator.cpp  nvidia_allocator.h
src/ksana_llm/cache_manager/: CMakeLists.txt  base_cache_manager.h  cache_manager_factory.cpp  cache_manager_factory.h  cache_manager_interface.h  direct_cache_manager.cpp  direct_cache_manager.h  prefix_cache_manager.cpp  prefix_cache_manager.h  prefix_cache_manager_test.cpp  prefix_cache_manager_test_helper.h
src/ksana_llm/cpp/: CMakeLists.txt  README.md  serving_forward_client.cpp
src/ksana_llm/data_hub/: CMakeLists.txt  data_hub.cpp  data_hub.h  data_hub_test.cpp  hidden_unit_buffer.cpp  hidden_unit_buffer.h  hidden_unit_buffer_test.cpp  schedule_output.cpp  schedule_output.h  schedule_output_test.cpp
src/ksana_llm/distributed/: CMakeLists.txt  control_channel.cpp  control_channel.h  control_channel_test.cpp  control_message.h  data_channel.cpp  data_channel.h  data_channel_test.cpp  distributed_coordinator.cpp  distributed_coordinator.h  distributed_coordinator_test.cpp  distributed_test_helper.h  node_info.h  packet_type.h  packet_util.cpp  packet_util.h  raw_packet.h  raw_socket.cpp  raw_socket.h  raw_socket_test.cpp
src/ksana_llm/endpoints/: CMakeLists.txt  endpoint_factory.cpp  endpoint_factory.h
src/ksana_llm/helpers/: block_manager_test_helper.h  environment_test_helper.h
src/ksana_llm/kernels/: CMakeLists.txt  argmax.h  cast.h  lookup_embedding.h  permute.h  trans_layout.h
src/ksana_llm/layers/: CMakeLists.txt  activation_layer.cpp  activation_layer.h  add_layer.cpp  add_layer.h  assemble_last_token_layer.cpp  assemble_last_token_layer.h  attention_layer.cpp  attention_layer.h  base_layer.h  cast_layer.cpp  cast_layer.h  custom_all_reduce_sum_layer.cpp  custom_all_reduce_sum_layer.h  eccl_all_gather_layer.h  eccl_all_reduce_sum_layer.h  emb_lookup_layer.cpp  emb_lookup_layer.h  flash_attention_layer.cpp  flash_attention_layer.h  fp8_matmul_layer.h  gptq_matmul_layer.h  group_matmul_layer.h  hccl_all_gather_layer.h  hccl_all_reduce_sum_layer.h  input_refit_layer.h  layer_test.cpp  layernorm_layer.cpp  layernorm_layer.h  matmul_layer.cpp  matmul_layer.h  matmul_layer_factory.h  moe_layer.h  mul_layer.h  nccl_all_gather_layer.h  nccl_all_reduce_sum_layer.cpp  nccl_all_reduce_sum_layer.h  paged_attention_layer.cpp  paged_attention_layer.h  set_torch_stream_layer.h  (+5 more)
src/ksana_llm/models/: CMakeLists.txt  tensor_manager.h
src/ksana_llm/periphery/: CMakeLists.txt  version_report.cpp  version_report.h  version_reporter.cpp  version_reporter.h
src/ksana_llm/plugins/: CMakeLists.txt  base_plugin.cpp  base_plugin.h
src/ksana_llm/profiler/: CMakeLists.txt  collector.cpp  collector.h  monitor.cpp  monitor.h  profiler.cpp  profiler.h  reporter.cpp  reporter.h  timer.cpp  timer.h  trace_event_recorder.cpp  trace_event_recorder.h  writer.cpp  writer.h
src/ksana_llm/python/: serving_client.py  serving_forward_client.py  serving_generate_client.py  serving_server.py
src/ksana_llm/runtime/: CMakeLists.txt  context.cpp  context.h  context_test.cpp  cuda_graph_runner.cpp  cuda_graph_runner.h  forward_request.h  infer_request.cpp  infer_request.h  infer_stage.h  llm_runtime.cpp  llm_runtime.h  model_instance.cpp  model_instance.h  request_state.h  sampling_request.h  threadpool.h  threadpool_test.cpp  worker.cpp  worker.h
src/ksana_llm/samplers/: CMakeLists.txt  sampler.cpp  sampler.h  sampler_test.cpp
src/ksana_llm/service/: CMakeLists.txt  inference_engine.cpp  inference_engine.h  inference_server.cpp  inference_server.h  service_lifetime.cpp  service_lifetime.h  service_lifetime_interface.h
src/ksana_llm/torch_op/: CMakeLists.txt  serving_impl.cpp  serving_impl.h  serving_op.cpp  serving_op.h
src/ksana_llm/utils/: CMakeLists.txt  base_file_tensor_loader.h  blocking_queue.h  calc_intvec_hash.h  channel.h  channel_test.cpp  common_context.cpp  common_context.h  common_device.h  common_tensor.cpp  common_tensor.h  context.h  context_test.cpp  device_helper.h  device_types.cpp  device_types.h  device_utils.cpp  device_utils.h  dtypes.h  environment.cpp  environment.h  finite_state_machine.cpp  finite_state_machine.h  get_custom_weight_name.cpp  get_custom_weight_name.h  gguf_file_tensor_loader.cpp  gguf_file_tensor_loader.h  gguf_file_tensor_loader_test.cpp  id_generator.h  kernel_registry_impl.h  kernel_registry_test.cpp  logger.h  memory_device.h  memory_utils.cpp  memory_utils.h  memory_utils_test.cpp  optional_file.h  optional_weight_map.h  pytorch_file_tensor_loader.cpp  pytorch_file_tensor_loader.h  (+40 more)
src/numerous_llm/: CMakeLists.txt  main.cpp
src/numerous_llm/batch_manager/: CMakeLists.txt  batch_manager.cpp  batch_manager.h
src/numerous_llm/block_manager/: CMakeLists.txt  base_allocator.cpp  base_allocator.h  block_allocator.cpp  block_allocator.h  block_manager.cpp  block_manager.h  block_manager_test.cpp  device_allocator.cpp  (+7 more)
tests/: CMakeLists.txt  channel_test.cc  http_endpoint_test.py  integration_test.py  integration_test_helper.py  kernel_registry_test.cpp  test.cpp  test.h  triton_wrapper_test.py
tests/model/: llama_integration_test.py  llama_test.yaml  llama_test_prefix_cache.yaml  qwen2_integration_test.py
(+472 files in other folders)
